server/public/styles.css
/* Color Variables */
:root {
  /* --purple  : #A864FD; */
  --blue        : #A2DCEE;
  --purple      : #9A9CEA;
  --purple-lt   : #A2B9EE;
  --cyan        : #29CDFF;
  --yellow      : rgb(253, 255, 134);
  --green       : #ADEEE2;
  --pink        : #F82672;
  --pink-lt     : rgb(247, 162, 179);
  --orange      : #FF6045; 
}

body {
  position: relative;
  background-image: repeating-linear-gradient(to right, var(--green) 0, var(--green) 2%, var(--blue) 2% 4%);
  min-height: 100vh;
  min-width: 100vw;
}

body::after {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, .3);
  z-index: -2;
}

/* Modal */

.modal-screen {
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, .8);
  z-index: 10;
}

.modal-screen .modal-box, .item-added-box, .confirm-delete-box {
  background-color: whitesmoke;
  border: 5px solid black;
}
.modal-box {
  width: 50%;
  max-width: 550px;
}

.item-added-box {
  max-width: 315px;
}

.confirm-delete-box {
  width: 30%;
}

span.close-btn {
  font-size: 3rem;
}

.no-scroll {
  height: 100vh;
  padding: 0;
  overflow: hidden;
}

/* Header */
.header {
  position: relative;
}

.header::after {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  width: 100%;
  height: 50%;
  background-color: var(--purple);
  border-bottom: 15px solid var(--purple-lt);
  z-index: -1;
}

.header img {
  max-width: 275px;
  max-height: 275px;
  object-fit: contain;
  cursor: pointer;
}

.cart-count {
  font-size: 1.4rem;
}
.cart-count:hover {
  cursor: pointer;
}

.cart-count span.icon {
  position: relative;
  text-shadow: 1px 1px 5px black;
}
span.icon span {
  position: absolute;
  top: 0;
  left: 40%;
  transform: translateY(-50%);
  text-shadow: none;
  font-size:1.5rem;
}
span.icon i {
  font-size: 3.3rem;
}

/* Catalog View */
.card-item {
  max-width: 285px;
}

.card img {
  height: 180px;
  object-fit: cover;
}
.card img:hover, .card-title:hover {
  cursor:pointer;
  opacity: .7;
}

.btn-details {
  background-color: cadetblue;
  color: white;
}

/* View details  */
.detail-container {
  font-size: 1.1rem;
}
.product-detail-img {
  text-align: center;
}
.product-detail-img img {
  max-width: 90%;
  height: 250px;
  object-fit: cover;
}
.btn-add-to-cart {
  color: white;
  text-shadow: 1px 1px 1px black;
  cursor: pointer;
  background-color: var(--purple);
}

/* Cart Summary View */

.btn-back-to-catalog {
  cursor: pointer;
  font-size: 1.3rem;
}
.cart-item img {
  max-width: 100%;
  height: 150px;
  object-fit: cover;
}

.cart-item img:hover, .cart-item h5:hover {
  cursor:pointer;
  opacity: .7;
}

#qty {
  width: 3rem;
  padding: 2px;
  text-align: center;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  opacity: 1;
}

/* Checkout */
.checkout-container {
  max-width: 550px;
}
.checkout-container span {
  color: var(--pink); 
}
#name-error, #address-error, #city-error, #state-error, #zipcode-error, #credit-card-error, #cvv-error {
  visibility: hidden;
  color: red;
  height: 1rem;
  font-size: .8rem;
}

.btn-complete {
  background-color: var(--green);
}
.btn-incomplete {
  background-color: gray;
}

.btn-incomplete:hover {
  cursor: context-menu;
}

/* Order Confirmation */
.order-confirm-container {
  max-width: 720px;
}
.order-confirm-container p {
  font-size: 1.8rem;
}
table {
  font-size: 1.3rem;
}

/* Global */

.link:hover {
  cursor: pointer;
  opacity: .5;
}

.detail-container, .cart-summary-container,
.card-item, .checkout-container, .order-confirm-container {
  background-color: whitesmoke;
  border: 3px solid var(--pink);
  box-shadow: 1px 1px 10px gray;
}

.w-20 {
  width: 20%;
}

.w-40 {
  width: 40%;
}

.w-80 {
  width: 80%;
}

/* Media Queries */

@media screen and (max-width: 529px) {
  /* Modals */
  .modal-box {
    width: 85%;
  }
  .modal-box p {
    font-size: 1.1rem;
  }
  .modal-box button {
    width: 50% !important;
  }

  .item-added-box i {
    display: none;
  }

  .confirm-delete-box {
    width: 85% !important;
  }
}

@media screen and (max-width: 700px) {
  /* Header */
  span.icon span {
    position: absolute;
    top: 10%;
    left: 35%;
    transform: translateY(-50%);
    text-shadow: none;
    font-size:1.4rem;
  }
  span.icon i {
    font-size: 2.5rem;
  }
}

@media screen and (max-width: 1000px) {
  /* Modals */
  .modal-box {
    width: 75%;
    text-align: center;
  }

  .item-added-box {
    width: 70%;
  }

  /* Header */
  .header img {
    width: 80%;
    height: auto;
    margin: 0 !important;
    padding: 10px 0 0 0 !important;
  }

  /* Catalog View */

  .card-item {
    max-width: 250px;
  }
  .card-item h5, .card-item p {
    text-align: center;
  }
  .card-item p:last-of-type {
    display: none;
  }

  /* Product Detail View */
  .detail-container {
    width: 90% !important;
    text-align: center;
    margin-top: 2rem;
  }
  .product-detail-img {
    height: 8rem;
  }
  .detail-container h3 {
    font-size: 1.5rem;
    margin-top: 1rem;
  }
  .detail-container p:first-of-type {
    font-size: 1.5rem;
  }
  .detail-container p:last-of-type {
    font-size: 1rem;
  }
  .btn-add-to-cart {
    width: 80%;
  }

  /* Cart Summary */
  .cart-summary-container {
    width: 90%;
  }
  .cart-item {
    width: 95% !important;
  }
  .cart-image-container {
    text-align: center;
  }
  .cart-item img {
    width: 100%;
    height: 100px;
  }
  .cart-title {
    padding: 10px 0;
  }
  .cart-total {
    font-size: 1.5rem;
  }
  .checkout-button {
    width: 50%;
  }

  /* Checkout Form */
  .checkout-container {
    width: 95%;
  }

  /* Order Confirmation */
  .order-confirm-container {
    width: 90%;
  }
  .order-confirm-container p {
    font-size: 1rem;
  }
}

